--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "v1",
+  "name": "openmusicapi",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index.ts",
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "api",
+    "music",
+    "open-source",
+    "dicoding"
+  ],
+  "author": "AlexMuhammad",
+  "license": "MIT",
+  "description": "Open music api is a simple music api for dicoding's submission",
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
     "@types/hapi": "^18.0.14",
+    "@types/pg": "^8.15.1",
     "dotenv": "^16.5.0",
+    "eslint": "^9.26.0",
     "joi": "^17.13.3",
     "nodemon": "^3.1.10",
+    "pg": "^8.15.6",
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "nanoid": "^5.1.5",
+    "node-pg-migrate": "^7.9.1"
   }
 }
