--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "openmusicapi",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "start": "nodemon ./src/index.ts",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src/**/*.ts",
     "migrate": "node-pg-migrate"
   },
   "keywords": [
@@ -28,6 +28,8 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "nanoid": "^5.1.5",
     "node-pg-migrate": "^7.9.1"
   }
